Better process config launch, and stricter exclusion handling